# mcp-server

./: README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml
.cursor/: mcp.json
docs/: git-commands.md  notes.txt  readme.md
git-mcp/: README.md  server.py  ssh_askpass_helper.sh
notes-mcp/: mcp_server.py
notes-mcp/docs/: git-commands.md
