[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server and client for a notes app: create, read, edit, delete documents with Ollama chat and MCP tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "ollama>=0.4.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
]
